Bug 256476 - Unreviewed build fix on macOS
Summary: Unreviewed build fix on macOS
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-08 10:47 PDT by Chris Dumez
Modified: 2023-05-08 10:59 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-05-08 10:47:37 PDT
Unreviewed build fix on macOS.
Comment 1 Chris Dumez 2023-05-08 10:48:11 PDT
<rdar://problem/109042873>
Comment 2 Chris Dumez 2023-05-08 10:49:00 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13586
Comment 3 EWS 2023-05-08 10:59:11 PDT
Committed 263804@main (6537be3e9a0b): <https://commits.webkit.org/263804@main>

Reviewed commits have been landed. Closing PR #13586 and removing active labels.