Cherry-pick 6537be3e9a0b. rdar://problem/109042873

Unreviewed build fix on macOS
    https://bugs.webkit.org/show_bug.cgi?id=256476
    rdar://109042873

    * Source/WebCore/platform/ios/VideoFullscreenInterfaceAVKit.mm:
    (-[WebAVPlayerViewController enterFullScreenAnimated:completionHandler:]):

    Canonical link: https://commits.webkit.org/263804@main

Identifier: 263769.22@safari-7616.1.14-branch